--- a/Porting/release_managers_guide.pod
+++ b/Porting/release_managers_guide.pod
@@ -760,7 +760,7 @@ formatting, e.g.
 
 You can add pod links for GitHub issue references thusly:
 
-    $ perl -p -i -e'BEGIN{undef $/}; s{(\[perl\s+#)(\d+)\]}{L<$1$2\]|https://github.com/Perl/perl5/issues/$2>}mg' pod/perldelta.pod
+    $ perl -p -i -e'BEGIN{undef $/}; s{(GH\s+#)(\d+)}{L<$1$2|https://github.com/Perl/perl5/issues/$2>}mg' pod/perldelta.pod
 
 If you make changes, be sure to commit them.
 
