skip flaky port test on windows
Fix #17992

The test being skipped there is unreliable on windows.
Possibly @leonerd has a better idea, but in the meantime
I think it's fine to simply skip that one.

(cherry picked from commit 10e96ffd8a056ee32854ea3dcb89d99d9411ac67)
Signed-off-by: Nicolas R <atoomic@cpan.org>

--- a/AUTHORS
+++ b/AUTHORS
@@ -248,6 +248,7 @@ Christian Burger               <burger@terra.mpikg-teltow.mpg.de>
 Christian Hansen               <chansen@cpan.org>
 Christian Kirsch               <ck@held.mind.de>
 Christian Millour              <cm.perl@abtela.com>
+Christian Walde (Mithaldu)     <walde.christian@gmail.com>
 Christian Winter               <bitpoet@linux-config.de>
 Christoph Lamprecht            <ch.l.ngre@online.de>
 Christophe Grosjean            <christophe.grosjean@gmail.com>
